probe-rs/src/architecture/arm/core/snapshots/probe_rs__architecture__arm__core__exception_handling__test__unwinding_in_exception_trampoline.snap
---
source: probe-rs/src/architecture/arm/core/exception_handling.rs
expression: printed_backtrace
---
Frame: __cortex_m_rt_SVCall_trampoline
	/home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src/main.rs:22
Frame: SVCall

Frame: __cortex_m_rt_main
	/home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src/main.rs:19:5
Frame: __cortex_m_rt_main_trampoline
	/home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src/main.rs:11:1
Frame: memmove

Frame: memmove


